<resources>
    <string name="app_name">Morris Clocking</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_credentials">Credentials</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>

    <string name="btn_clock_in">Clock In</string>
    <string name="btn_clock_out">Clock Out</string>
    <string name="btn_status">Status</string>

    <string name="enableWifi">Please enable wifi</string>
    <string name="wifiDisabled">Wifi is disabled</string>
    <string name="connectNOC">Connect to network \"NOC\"</string>

    <string name="stateMessage">Clock Status</string>
    <string name="hoursWorked">Worked: %s</string>
    <string name="hoursRemaining">Remaining: %s</string>

</resources>
